--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@react-three/fiber": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.150.0"
+    "three": "^0.150.0",
+    "three-mesh-ui": "^6.5.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
